--- a/CallingAPIFromMVC/Views/Product/Create.cshtml
+++ b/CallingAPIFromMVC/Views/Product/Create.cshtml
@@ -1,18 +1,18 @@
 ﻿@model CallingAPIFromMVC.Models.ProductData
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "create";
 }
 
-<h1>Create</h1>
+<h1>create</h1>
 
 <h4>ProductData</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
+            
             <div class="form-group">
                 <label asp-for="ProductType" class="control-label"></label>
                 <input asp-for="ProductType" class="form-control" />
